<resources>

    <!-- Title of App-->
    <string name="app_name">My News</string>

    <!-- Title of fragments -->
    <string name="tab_text_1">Top Stories</string>
    <string name="tab_text_2">Most Popular</string>
    <string name="tab_text_3">Business</string>

    <!-- String test for fragment -->
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="refresh">Refresh</string>

    <!-- Item of RC -->
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="section">Section</string>
    <string name="image">Image</string>

    <!-- Section navigation drawer -->
    <string name="activity_main_menu_drawer_categories">Categories</string>
    <string name="categorie_top_stories">TOP STORIES</string>
    <string name="categorie_most_popular">MOST POPULAR</string>
    <string name="arts">Arts</string>
    <string name="automobiles">Automobiles</string>
    <string name="books">Books</string>
    <string name="business">Business</string>
    <string name="fashion">Fashion</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="insider">Insider</string>
    <string name="magazine">Magazine</string>
    <string name="movies">Movies</string>
    <string name="national">National</string>
    <string name="nyregion">NY Region</string>
    <string name="obituaries">Obituaries</string>
    <string name="opinion">Opinion</string>
    <string name="politics">Politics</string>
    <string name="realestate">Real Estate</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="sundayreview">Sunday Review</string>
    <string name="technology">Technology</string>
    <string name="theater">Theater</string>
    <string name="tmagazine">T Magazine</string>
    <string name="travel">Travel</string>
    <string name="upshot">Up Shot</string>
    <string name="world">World</string>

    <!-- Section for fragment business -->
    <string name="section_arts">arts</string>
    <string name="section_automobiles">automobiles</string>
    <string name="section_books">books</string>
    <string name="section_business">business</string>
    <string name="section_fashion">fashion</string>
    <string name="section_food">food</string>
    <string name="section_health">health</string>
    <string name="section_home">home</string>
    <string name="section_insider">insider</string>
    <string name="section_magazine">magazine</string>
    <string name="section_movies">movies</string>
    <string name="section_national">national</string>
    <string name="section_nyregion">nyregion</string>
    <string name="section_obituaries">obituaries</string>
    <string name="section_opinion">opinion</string>
    <string name="section_politics">politics</string>
    <string name="section_realestate">realestate</string>
    <string name="section_science">science</string>
    <string name="section_sports">sports</string>
    <string name="section_sundayreview">sundayreview</string>
    <string name="section_technology">technology</string>
    <string name="section_theater">theater</string>
    <string name="section_tmagazine">tmagazine</string>
    <string name="section_travel">travel</string>
    <string name="section_upshot">upshot</string>
    <string name="section_world">world</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Used in Option's Menu -->
    <string name="notifications">Notifications</string>
    <string name="menu_options">Menu Options</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="search">Search</string>


    <!-- Used in NotiSearchActivity -->
    <string name="boolean_notisearch">BOOLEAN NOTISEARCH</string>
    <string name="check_query_fields">Please enter query term</string>
    <string name="check_checkbox">Select minimum one section</string>


    <string name="ErrorRequestSearch">Error Request Search !!</string>


    <!-- Used for Search -->
    <string name="search_fields">SEARCH</string>
    <string name="no_result">NO RESULT</string>
    <string name="checkDateSelected">Select date for your search</string>
    <string name="checkBeginAndEndDate">Check that the begin date is more old than the end date</string>
    <string name="begin_date">BEGIN DATE</string>
    <string name="end_date">END DATE</string>
    <string name="hint_search">Search query term</string>
    <string name="noti_search_date">dd/mm/yyyy</string>


    <!-- Used for Notifications -->
    <string name="enable_notifications">ENABLE  NOTIFICATIONS</string>
    <string name="ALARM_ACTIVATE">Alarm activate</string>
    <string name="ALARM_DESACTIVATE">Alarm desactivate</string>
    <string name="notification_time">Notification time</string>
    <string name="open_time_picker">OPEN TIME PICKER</string>
    <string name="chanelID">chanel ID</string>
    <string name="notificationTitle">Notifications</string>
    <string name="notif_other_sdk">Mynews have a message for you</string>


    <!-- Used for the text notification displayed by system -->
    <!-- Use \u0020 for adding a space -->
    <string name="yourResearch">Your research for\u0020</string>
    <string name="found">\u0020on MyNews has found\u0020</string>
    <string name="articles">\u0020articles.</string>
    <string name="application_developed_by_nycko93_for_the_project_5_of_android_course_by_openclassrooms">Application developed by NyCko93 for the project 5 of android course by Openclassrooms.</string>
    <string name="you_need_help_contact_me">You need help ? Contact me :</string>
    <string name="twitter">Twitter :</string>
    <string name="facebook">Facebook :</string>
    <string name="github">GitHub :</string>
    <string name="google">Google+ :</string>
    <string name="nycko93">#NyCko93</string>
    <string name="nycko93fb">/NyCko93</string>
    <string name="gmail">Gmail :</string>
    <string name="fenyxnycko">fenyxnycko</string>
    <string name="copyright">The articles presented in this application are the exclusive property of The New York Times. The present use of their API is for educational purposes and not for profit.</string>


</resources>
