<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/icon_search_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/menu_options"
        android:icon="@drawable/icon_menu_24dp"
        android:title="@string/menu_options"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/item_notifications"
                android:title="@string/notifications"
                app:showAsAction="never" />
            <item
                android:id="@+id/item_help"
                android:title="@string/help"
                app:showAsAction="never" />

            <item
                android:id="@+id/item_about"
                android:title="@string/about"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
