<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_notisearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.Activities.NotiSearchActivity">

    <!-- Toolbar -->
    <include
        layout="@layout/toolbar_noti_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Edit Text for search -->
    <EditText
        android:id="@+id/edit_text_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorBackgroundCase"
        android:cursorVisible="true"
        android:drawableStart="@drawable/icon_search_24dp"
        android:hint="@string/hint_search"
        android:inputType="text"
        android:textCursorDrawable="@color/colorCursor"
        tools:ignore="Autofill"
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/checkbox_arts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_begin_date"
        android:layout_alignTop="@+id/edit_begin_date"
        android:layout_marginStart="@+id/text_view_begin_date"
        android:layout_marginTop="50dp"
        android:text="@string/section_arts"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_automobiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_arts"
        android:layout_alignTop="@+id/checkbox_arts"
        android:layout_marginTop="40dp"
        android:text="@string/section_automobiles"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_automobiles"
        android:layout_alignTop="@+id/checkbox_automobiles"
        android:layout_marginTop="40dp"
        android:text="@string/section_books"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_end_date"
        android:layout_alignTop="@+id/edit_end_date"
        android:layout_marginStart="@+id/edit_end_date"
        android:layout_marginTop="50dp"
        android:text="@string/section_business"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_fashion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_business"
        android:layout_alignTop="@+id/checkbox_business"
        android:layout_marginTop="40dp"
        android:text="@string/section_fashion"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_fashion"
        android:layout_alignTop="@+id/checkbox_fashion"
        android:layout_marginTop="40dp"
        android:text="@string/section_food"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_books"
        android:layout_alignTop="@+id/checkbox_books"
        android:layout_marginTop="40dp"
        android:text="@string/section_health"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_food"
        android:layout_alignTop="@+id/checkbox_food"
        android:layout_marginTop="40dp"
        android:text="@string/section_home"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_insider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_health"
        android:layout_alignTop="@+id/checkbox_health"
        android:layout_marginTop="40dp"
        android:text="@string/section_insider"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <CheckBox
        android:id="@+id/checkbox_magazine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkbox_home"
        android:layout_alignTop="@+id/checkbox_home"
        android:layout_marginTop="40dp"
        android:text="@string/section_magazine"
        android:textColor="@color/colorSection"
        android:textSize="@dimen/word_size_checkbox"
        android:theme="@style/cbStyle"
        tools:ignore="RelativeOverlap" />

    <View
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/checkbox_magazine"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorBackgroundCase" />

    <TextView
        android:id="@+id/text_view_begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_search"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/edit_begin_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_view_begin_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/noti_search_date"
        android:longClickable="false"
        android:textColor="@color/colorContent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_view_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_text_search"
        android:layout_marginStart="220dp"
        android:layout_marginTop="60dp"
        android:text="@string/end_date" />

    <TextView
        android:id="@+id/edit_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/text_view_end_date"
        android:layout_alignTop="@+id/text_view_end_date"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/noti_search_date"
        android:longClickable="false"
        android:textColor="@color/colorContent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/button_done_for_search"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/colorBackgroundCase"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/search_fields"
        android:textColor="@color/colorSection"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_enable_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/bar"
        android:layout_alignTop="@id/bar"
        android:layout_marginTop="25dp"
        android:text="@string/enable_notifications"
        android:textSize="20sp" />

    <Switch
        android:id="@+id/button_for_enable_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_enable_notifications"
        android:layout_alignEnd="@id/bar" />

</RelativeLayout>