<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/item_search"
    android:padding="2dip"
    android:weightSum="10">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="11">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

            <ImageView
                android:id="@+id/fragment_main_item_image"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="5dp"
                android:text="@string/image" />
        </LinearLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:id="@+id/fragment_main_item_section"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:layout_weight="6"
                    android:text="@string/section"
                    android:textColor="@color/colorSection"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fragment_main_item_date"
                    android:layout_width="0dp"
                    android:layout_height="17dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="2"
                    android:text="@string/date"
                    android:textColor="@color/colorDate"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9">

                <TextView
                    android:id="@+id/fragment_main_item_content"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:maxLines="2"
                    android:paddingStart="5dp"
                    android:paddingEnd="30dp"
                    android:text="@string/content"
                    android:textColor="@color/colorContent"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>